tenzir/integration/data/reference/parser/test_functions/step_00.ref
error: expected one of: `.`, `+`, `-`, `/`, `*`, `==`, `!=`, `<`, `<=`, `>`, `>=`, `|`, newline
 --> /dev/stdin:1:6
  |
1 | a = b()
  |      ^ got `(`
  |